--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.container-fluid{
+.container-fluid {
   padding: 0px;
 }
 
@@ -13,7 +13,7 @@ body {
   /* height: 67px; */
   padding: 0px 1.75rem;
   background-color: white;
-  border-bottom:2px solid rgb(233, 235, 240);
+  border-bottom: 2px solid rgb(233, 235, 240);
 }
 
 .navbar-brand {
@@ -21,43 +21,42 @@ body {
 }
 
 .navbar img {
-  height: 32px; 
+  height: 32px;
   margin-right: 3rem;
 }
-.g-3 .mt-2 .d-block .text-end p{
+.g-3 .mt-2 .d-block .text-end p {
   font: 600 1.1rem / 28px Montserrat;
 }
-.mt-4.row p{
-  color: rgb(74, 79, 94);    
+.mt-4.row p {
+  color: rgb(74, 79, 94);
   font: 600 1.1rem / 28px Montserrat;
 }
 
-.drop-navlink
-{
+.drop-navlink {
   color: white;
   margin: 0px;
 }
 
-.drop-navlink.dropdown-toggle.btn.btn-primary:focus{
+.drop-navlink.dropdown-toggle.btn.btn-primary:focus {
   box-shadow: none;
 }
 
-.drop-navlink.dropdown-toggle.btn.btn-primary{
+.drop-navlink.dropdown-toggle.btn.btn-primary {
   margin: 0px;
   padding: 0px;
   background-color: white;
 }
 
-.drop-img{
+.drop-img {
   height: 42px !important;
   width: 42px;
   margin-right: 0px !important;
 }
-.dropdown-toggle .nav-link{
+.dropdown-toggle .nav-link {
   width: 45px;
 }
 .nav-link {
-  color:rgb(51, 56, 79);
+  color: rgb(51, 56, 79);
   margin: 0px 32px;
   padding: 0px;
   padding-top: 16px;
@@ -68,13 +67,16 @@ body {
   height: 65px;
 }
 
-.nav-link.active{
-  color:rgb(51, 56, 79);
+.nav-link.active {
+  color: rgb(51, 56, 79);
   padding-bottom: 15px;
   border-bottom: 4px solid #05acff;
 }
 
-.btn,.btn:active:focus,.btn:focus,.btn:active{
+.btn,
+.btn:active:focus,
+.btn:focus,
+.btn:active {
   color: rgb(158, 161, 168);
   background: rgb(233, 235, 240);
   border: none;
@@ -87,12 +89,13 @@ body {
   margin: 12px 24px;
 }
 
-.dropdown-menu[data-bs-popper]{
+.dropdown-menu[data-bs-popper] {
   top: 53px;
   left: -86px;
   margin-top: 0.75rem;
   outline: none;
-  box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
+  box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%),
+    0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
   border-radius: 4px;
   width: 180px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -100,56 +103,55 @@ body {
   background-color: #fff;
 }
 
-.dropdown-menu hr{
+.dropdown-menu hr {
   background: rgb(233, 235, 240);
   height: 2px;
   margin: 0px 1rem;
-  margin-right :0px;
+  margin-right: 0px;
 }
 
-.dropdown-item{
+.dropdown-item {
   padding-left: 16px;
   padding-right: 16px;
   margin-bottom: 0.75rem;
   margin-top: 0.75rem;
 }
 
-.svg-icon{
+.svg-icon {
   width: 24px;
   color: rgba(0, 0, 0, 0.54);
 }
 
-.svg-icon~p{
+.svg-icon ~ p {
   color: rgb(102, 104, 110);
   padding: 0px;
   margin: 0px;
   font: 500 1.1rem / 28px Montserrat;
 }
 
-.svg-icon~p p{
+.svg-icon ~ p p {
   font: 500 0.85rem / 20px Montserrat;
   padding: 0px;
   margin: 0px;
 }
 
-.form-floating > label
-{
+.form-floating > label {
   left: 11px;
 }
-.btn:hover{
+.btn:hover {
   color: rgb(158, 161, 168);
   background-color: rgba(0, 0, 0, 0.34);
   border: none;
   box-shadow: none;
 }
 
-.content{
+.content {
   color: rgb(74, 79, 94);
   font: 500 0.85rem / 20px Montserrat;
   margin: 0px;
 }
 
-.cardlogo~p{
+.cardlogo ~ p {
   font: 600 1.25rem / 32px Montserrat;
   margin: 0px;
   margin-left: 0.7rem;
@@ -157,7 +159,7 @@ body {
   line-height: 1.5rem;
 }
 
-.card{
+.card {
   position: relative;
   width: 100%;
   border-radius: 0.25rem;
@@ -168,10 +170,10 @@ body {
   border: none;
   padding: 1.5rem;
 }
-.card-body{
+.card-body {
   padding: 0px;
 }
-.cardlogo{
+.cardlogo {
   border-radius: 50%;
   border: 1px solid white;
   background-color: rgb(244, 245, 247);
@@ -180,7 +182,7 @@ body {
   padding: 0.75rem 0.875rem;
 }
 
-.detail-content-dot{
+.detail-content-dot {
   display: inline-block;
   width: 0.25rem;
   height: 0.25rem;
@@ -190,95 +192,100 @@ body {
   margin-right: 0.4rem;
 }
 
-.detail-content{
+.detail-content {
   font: 500 0.85rem / 20px Montserrat;
   color: rgb(102, 104, 110);
   font-weight: bolder;
 }
 
-
-.nav-link:hover{
-  color:rgb(51, 56, 79);
+.nav-link:hover {
+  color: rgb(51, 56, 79);
   padding-bottom: 15px;
   border-bottom: 4px solid #6c757d5c;
 }
-.nav-link.active:hover{
-  color:rgb(51, 56, 79);
+.nav-link.active:hover {
+  color: rgb(51, 56, 79);
   border-bottom: 4px solid #05acff;
 }
 
-.left-side{
+.left-side {
   padding: 1.5rem;
   box-shadow: rgb(56 66 95 / 20%) 0.25rem 0.25rem 2.5rem;
   background-color: rgb(244, 245, 247);
   height: calc(100vh - 4.2rem);
   overflow: auto;
 }
-.right-side{
+.right-side {
   padding: 1rem 1.5rem 3rem;
   height: calc(100vh - 4.2rem);
   overflow: auto;
 }
-.col-md>.row{
+.col-md > .row {
   margin-top: 24px;
 }
-.form-control, .form-select{
+.form-control,
+.form-select {
   border-radius: 0px;
   border: 2px solid #05acff;
   box-shadow: none;
   background-color: rgb(244, 245, 247);
   padding: 1rem 0.75rem;
   line-height: 22px;
-
 }
-.left-panel-row{
+.left-panel-row {
   margin: 0px;
 }
-.dropdown-toggle::after{
+.dropdown-toggle::after {
   color: rgb(48, 151, 233);
   margin: 0px 7px;
   margin-right: 16px;
   margin-left: 7px;
 }
 
-.form-control:focus, .form-select:focus{
+.form-control:focus,
+.form-select:focus {
   box-shadow: none;
   background-color: rgb(244, 245, 247);
 }
-.form-select:focus-visible{
+.form-select:focus-visible {
   border: 2px solid #05acff;
 }
-.form-floating > .form-control:focus ~ label{
+.form-floating > .form-control:focus ~ label {
   transform: scale(0.85) translateY(-2.5rem) translateX(1.15rem);
 }
-.form-floating > label{
+.form-floating > label {
   color: #707071;
 }
 
-hr{
+hr {
   margin: 1.5rem 0;
 }
-.nav-item{
-    display: flex;
-    width: 50%;
-    justify-content: center;
+.nav-item {
+  display: flex;
+  width: 50%;
+  justify-content: center;
 }
-.col-sm-8 .nav-item{
+.col-md-8 .nav-item {
   display: flex;
   width: 25%;
   justify-content: center;
   background-color: white;
 }
 
-.col-sm-8 .nav-item .nav-link.active{
+.col-md-8 .nav-item .nav-link.active {
   background-color: white;
 }
 
-.col-sm-8 .nav-item .nav-link.active:hover{
+.col-md-8 .nav-item .nav-link.active:hover {
   background-color: white;
 }
 
-.nav-tabs .nav-link{
+.navbar-light .navbar-nav .nav-link {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
+.nav-tabs .nav-link {
   display: block;
   width: 100%;
   border: none;
@@ -290,7 +297,7 @@ hr{
   height: 48px;
   letter-spacing: 0.02857em;
 }
-h3{
+h3 {
   color: rgb(74, 79, 94);
   font: 600 1.25rem / 32px Montserrat;
   margin: 0px;
@@ -298,10 +305,10 @@ h3{
   display: inline-block;
 }
 
-p{
+p {
   font: 600 1.1rem / 28px Montserrat;
 }
-.accordion-item{
+.accordion-item {
   border: none;
   padding: 0.5rem 0px;
   border: 1px solid rgb(233, 235, 240);
@@ -309,18 +316,18 @@ p{
   margin-bottom: 1rem;
 }
 
-.accordion-button:not(.collapsed){
+.accordion-button:not(.collapsed) {
   color: rgb(74, 79, 94);
   background-color: white;
 }
 
-.accordion-header{
+.accordion-header {
   padding: 0px 16px;
   color: rgb(32, 37, 63);
   font: 600 1.25rem / 32px Montserrat;
 }
 
-.accordion-body{
+.accordion-body {
   font-family: Ubuntu;
   font-style: normal;
   font-weight: normal;
@@ -329,11 +336,11 @@ p{
   color: rgb(74, 79, 94);
 }
 
-.accordion-item:not(:first-of-type){
+.accordion-item:not(:first-of-type) {
   border: 1px solid rgb(233, 235, 240);
 }
 
-.accordion-item .accordion-button{
+.accordion-item .accordion-button {
   margin-bottom: 1rem;
   padding: 0px;
   box-shadow: none;
@@ -342,17 +349,17 @@ p{
   font: 600 1.25rem / 32px Montserrat;
 }
 
-.nav-tabs .nav-link.active:hover{
+.nav-tabs .nav-link.active:hover {
   border-bottom: 4px solid #48c8ff;
   background-color: rgb(244, 245, 247);
   width: 100%;
   color: rgb(32, 37, 63);
 }
-.nav-tabs .nav-link:hover{
+.nav-tabs .nav-link:hover {
   border: none;
   padding-bottom: 16px;
 }
-.nav-tabs .nav-link.active{
+.nav-tabs .nav-link.active {
   border: none;
   border-bottom: 4px solid #48c8ff;
   padding-bottom: 12px;
@@ -360,7 +367,7 @@ p{
   background-color: rgb(244, 245, 247);
 }
 
-.btn-submit{
+.btn-submit {
   color: white;
   background: rgb(88, 183, 47);
   letter-spacing: 0.02em;
@@ -368,23 +375,27 @@ p{
   font: 600 1rem / 20px Montserrat;
   text-transform: none;
   border-radius: 4px;
-  border:0;
-  width:200px;
+  border: 0;
+  width: 200px;
   height: 50px;
 }
-.credit-p{
+
+.btn-submit:disabled {
+  background-color: #e9ebf0;
+}
+.credit-p {
   color: rgb(74, 79, 94);
   margin-right: 1rem;
 }
 
-.nav.nav-tabs{
-  margin-bottom :32px;
+.nav.nav-tabs {
+  margin-bottom: 32px;
 }
 
-#left-panel-tabpane-Search-History .row{
+#left-panel-tabpane-Search-History .row {
   margin: 0px;
 }
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
