--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,11 @@ body {
   height: 32px;
   margin-right: 3rem;
 }
+
 .g-3 .mt-2 .d-block .text-end p {
   font: 600 1.1rem / 28px Montserrat;
 }
+
 .mt-4.row p {
   color: rgb(74, 79, 94);
   font: 600 1.1rem / 28px Montserrat;
@@ -52,9 +54,11 @@ body {
   width: 42px;
   margin-right: 0px !important;
 }
+
 .dropdown-toggle .nav-link {
   width: 45px;
 }
+
 .nav-link {
   color: rgb(51, 56, 79);
   margin: 0px 32px;
@@ -122,22 +126,23 @@ body {
   color: rgba(0, 0, 0, 0.54);
 }
 
-.svg-icon ~ p {
+.svg-icon~p {
   color: rgb(102, 104, 110);
   padding: 0px;
   margin: 0px;
   font: 500 1.1rem / 28px Montserrat;
 }
 
-.svg-icon ~ p p {
+.svg-icon~p p {
   font: 500 0.85rem / 20px Montserrat;
   padding: 0px;
   margin: 0px;
 }
 
-.form-floating > label {
+.form-floating>label {
   left: 11px;
 }
+
 .btn:hover {
   color: rgb(158, 161, 168);
   background-color: rgba(0, 0, 0, 0.34);
@@ -151,7 +156,7 @@ body {
   margin: 0px;
 }
 
-.cardlogo ~ p {
+.cardlogo~p {
   font: 600 1.25rem / 32px Montserrat;
   margin: 0px;
   margin-left: 0.7rem;
@@ -170,9 +175,11 @@ body {
   border: none;
   padding: 1.5rem;
 }
+
 .card-body {
   padding: 0px;
 }
+
 .cardlogo {
   border-radius: 50%;
   border: 1px solid white;
@@ -203,6 +210,7 @@ body {
   padding-bottom: 15px;
   border-bottom: 4px solid #6c757d5c;
 }
+
 .nav-link.active:hover {
   color: rgb(51, 56, 79);
   border-bottom: 4px solid #05acff;
@@ -215,15 +223,18 @@ body {
   height: calc(100vh - 4.2rem);
   overflow: auto;
 }
+
 .right-side {
   padding: 1rem 1.5rem 3rem;
   height: calc(100vh - 4.2rem);
   overflow: auto;
   position: relative;
 }
-.col-md > .row {
+
+.col-md>.row {
   margin-top: 24px;
 }
+
 .form-control,
 .form-select {
   border-radius: 0px;
@@ -233,9 +244,11 @@ body {
   padding: 1rem 0.75rem;
   line-height: 22px;
 }
+
 .left-panel-row {
   margin: 0px;
 }
+
 .dropdown-toggle::after {
   color: rgb(48, 151, 233);
   margin: 0px 7px;
@@ -248,24 +261,29 @@ body {
   box-shadow: none;
   background-color: rgb(244, 245, 247);
 }
+
 .form-select:focus-visible {
   border: 2px solid #05acff;
 }
-.form-floating > .form-control:focus ~ label {
+
+.form-floating>.form-control:focus~label {
   transform: scale(0.85) translateY(-2.5rem) translateX(1.15rem);
 }
-.form-floating > label {
+
+.form-floating>label {
   color: #707071;
 }
 
 hr {
   margin: 1.5rem 0;
 }
+
 .nav-item {
   display: flex;
   width: 50%;
   justify-content: center;
 }
+
 .col-md-8 .nav-item {
   display: flex;
   width: 25%;
@@ -298,6 +316,7 @@ hr {
   height: 48px;
   letter-spacing: 0.02857em;
 }
+
 h3 {
   color: rgb(74, 79, 94);
   font: 600 1.25rem / 32px Montserrat;
@@ -309,6 +328,7 @@ h3 {
 p {
   font: 600 1.1rem / 28px Montserrat;
 }
+
 .accordion-item {
   border: none;
   padding: 0.5rem 0px;
@@ -356,10 +376,12 @@ p {
   width: 100%;
   color: rgb(32, 37, 63);
 }
+
 .nav-tabs .nav-link:hover {
   border: none;
   padding-bottom: 16px;
 }
+
 .nav-tabs .nav-link.active {
   border: none;
   border-bottom: 4px solid #48c8ff;
@@ -384,6 +406,7 @@ p {
 .btn-submit:disabled {
   background-color: #e9ebf0;
 }
+
 .credit-p {
   color: rgb(74, 79, 94);
   margin-right: 1rem;
@@ -396,6 +419,7 @@ p {
 #left-panel-tabpane-Search-History .row {
   margin: 0px;
 }
+
 #left-panel-tabpane-Search-Result .row {
   margin: 0px;
 }
@@ -481,6 +505,7 @@ p {
   color: rgb(51, 141, 188);
   transition: color 0.5s ease 0s;
 }
+
 .selected-result-bg {
   background-color: rgba(241, 145, 68, 0.2);
 }
@@ -511,6 +536,7 @@ p {
   margin: 0.5rem;
   position: relative;
 }
+
 .phonenumber {
   color: rgb(74, 79, 94);
   text-transform: capitalize;
@@ -605,6 +631,7 @@ p {
   color: rgb(102, 104, 110);
   font: 500 1.1rem / 28px Montserrat;
 }
+
 .names-field h3 {
   margin: 0px;
   color: rgb(32, 37, 63);
@@ -618,6 +645,7 @@ p {
   top: 1.5rem;
   cursor: pointer;
 }
+
 .field {
   box-sizing: border-box;
   display: flex;
@@ -628,6 +656,7 @@ p {
   color: rgb(102, 104, 110);
   margin-top: 0.75rem;
 }
+
 .cpy-to-clipboard-img {
   position: absolute;
   right: 0px;
@@ -653,7 +682,134 @@ p {
   padding: 0px;
   margin: 0px;
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container-fluid.myproperties {
+  padding: 16px;
+}
+
+h1.my-properties {
+  color: rgb(0, 0, 0);
+  font-size: 2em;
+  margin: 0.67em 0;
+  line-height: 1.5;
+  font-weight: bold;
+}
+
+.download-btn {
+  display: flex;
+  justify-content: end;
+  margin-bottom: 1rem;
+}
+
+.btn-download {
+  display: flex;
+  align-items: center;
+  border-color: transparent;
+  margin: 0px;
+  padding: 0px;
+  outline: none;
+  height: 36px;
+  line-height: 36px;
+  border-radius: 2px;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  background-color: rgb(55, 160, 0);
+  text-align: center;
+}
+
+.btn-download:hover {
+  background-color: rgba(55, 160, 0, 0.9);
+}
+
+.download-btn-span {
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  letter-spacing: 0px;
+  text-transform: capitalize;
+  font-weight: 600;
+  margin: 0px;
+  padding-left: 8px;
+  padding-right: 16px;
+  color: rgb(255, 255, 255);
+}
+
+.download-btn-svg {
+  vertical-align: middle;
+  color: rgb(255, 255, 255);
+  margin-left: 12px;
+  margin-right: 0px;
+}
+
+.drop_down {
+  transform: rotate(-90deg);
+}
+
+.drop_downtd {
+  cursor: pointer;
+}
+
+tbody {
+  border-top: none !important;
+}
+
+.search-panel input {
+  width: 100%;
+}
+
+.border-thin {
+  border-right-width: 0 !important;
+}
+
+.border-thin+* {
+  border-left-width: 0 !important;
+}
+
+table th,
+table td,
+table tr td {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.table-responsive {
+  overflow-x: auto;
+}
+
+.detail-btn {
+  border: 10px;
+  border-radius: 2px;
+  padding: 0px 7px;
+  line-height: 36px;
+  background-color: rgb(48, 151, 233);
+}
+
+.detail-span {
+  position: relative;
+  opacity: 1;
+  font-size: 14px;
+  letter-spacing: 0px;
+  text-transform: capitalize;
+  font-weight: 500;
+  margin: 0px;
+  user-select: none;
+  padding-left: 16px;
+  padding-right: 16px;
+  color: rgb(255, 255, 255);
+}
+
+.sort-asc{
+  box-shadow: inset 0 3px 0 0 rgb(0 0 0 / 60%) !important;
+}
+
+.sort-desc{
+  box-shadow: inset 0 -3px 0 0 rgb(0 0 0 / 60%) !important;
+}
+
+.header-namefield{
+  box-shadow: 0 2px 15px 0 rgb(0 0 0 / 15%);
 }
