--- a/src/index.css
+++ b/src/index.css
@@ -719,6 +719,7 @@ h1.my-properties {
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
   background-color: rgb(55, 160, 0);
   text-align: center;
+  text-decoration: none;
 }
 
 .btn-download:hover {
@@ -812,4 +813,5 @@ table tr td {
 
 .header-namefield{
   box-shadow: 0 2px 15px 0 rgb(0 0 0 / 15%);
+  cursor: pointer;
 }
