--- a/src/index.css
+++ b/src/index.css
@@ -775,11 +775,10 @@ table tr td {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  width: auto !important;
+  padding: 5px 7px !important;
 }
 
-.table-responsive {
-  overflow-x: auto;
-}
 
 .detail-btn {
   border: 10px;
@@ -803,15 +802,26 @@ table tr td {
   color: rgb(255, 255, 255);
 }
 
-.sort-asc{
+.sort-asc {
   box-shadow: inset 0 3px 0 0 rgb(0 0 0 / 60%) !important;
 }
 
-.sort-desc{
+.sort-desc {
   box-shadow: inset 0 -3px 0 0 rgb(0 0 0 / 60%) !important;
 }
 
-.header-namefield{
+.header-namefield {
   box-shadow: 0 2px 15px 0 rgb(0 0 0 / 15%);
   cursor: pointer;
+  text-align: center;
+}
+
+.pagination-btn:hover {
+  background: rgba(0, 0, 0, .3);
+  color: #fff;
+}
+
+.pagination-btn{
+  color: rgba(0,0,0,.6);
+  background: rgba(0,0,0,.1);
 }
